--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mongoose": "^8.10.1",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "pug": "^3.0.3",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1",
     "tinymce": "^7.7.0"
   },
